# Embedded

./: CMakeLists.txt
src/: DumbExample.c  DumbExample.h  LedDriver.c  LedDriver.h  main.c  max_min_array.c  max_min_array.h  temperature_converter.c  temperature_converter.h
test/: InstantTest.c  LedDriverTest.c  SprintfTest.c  test_main.c  test_max_min_array.c  test_max_min_array.h  test_temperature_converter.c  test_temperature_converter.h
